<resources>
    <string name="app_name">Grace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mango1">
        သရက်သည်မြေအမျိုးမျိုး၊ရာသီဥတုအမျိုးမျိုးနှင့်ပင်လယ်ရေမျက်နှာပြင်အထက်ပေ၅၀၀၀မြင့်သောနေရာအထိရှင်သန်ဖြစ်ထွန်းနိုင်သည်။ခြောက်သွေ့သောရာသီဥတုနှင့်မိုးပြင်းထန်စွာရွာသွန်းခြင်းကိုအသင့်အတင့်ခံနိုင်သည်။သရက်ကိုမြန်မာနိုင်ငံနေရာဒေသအနှံအပြားတိုင်းဒေသကြီးများနှင့်ပြည်နယ်အသီးသီးတွင်စိုက်ပျိုးဖြစ်ထွန်းသည်ကိုတွေ့ရှိရသည်။သရက်ကိုအစေ့မှဖြစ်စေ၊ကိုင်းကူးကိုင်းဆက်နည်းဖြင့်ဖြစ်စေမျိုးပွားလေ့ရှိကြသည်။မိုးနည်းဒေသ၏မိုးဦးရာသီနှင့်မိုးများဒေသ၏မိုးနှောင်းရာသီ၌ကိုင်းကူးကိုင်းဆက်နည်းဖြင့်မျိုးပွားခြင်းကိုအောင်မြင်စွာလုပ်ကိုင်နိုင်သည်။ကိုင်းကူးကိုင်းဆက်ပြီးနောက်(၆)လမှတစ်နှစ်အတွင်းတွင်မြေချစိုက်ပျိုးနိုင်သည်။ရွှေ့ပြောင်းစိုက်ပျိုးရန်အတွက်အကျယ်(၃)ပေနှင့်အနက်(၃)ပေခန့်ရှိသောစိုက်ကျင်းများတူးဖော်ရမည်။စိုက်ကျင်းထဲတွင်သဘာဝမြေဩဇာနှင့်မြေဆွေးကိုရောစပ်ထည့်ပြီးနောက်ရေလောင်း၍မြေနှပ်ထားပါမည်။ပင်ကြားတန်းကြားကို(၁၂)ပေပတ်လည်မှ(၂၀)ပေပတ်လည်အထိအကွာအဝေးထားစိုက်ပျိုးနိုင်သည်။သရက်ပင်များ၏နှစ်စဉ်သီးပွင့်နိုင်မှုအခြေအနေသည်စိုက်ပျိုးသည့်သရက်အမျိုးရာသီဥတုနှင့်ပြုစုမှုတိုအပေါ်မူတည်ပါသည်။
    </string>
    <string name="mango2">
        သင့်တော်သောမျိုးရွေးချယ်မှု၊ အစား အချိန်မှန်ပြုစုစောင့်ရှောက်မှုများ (ရေသွင်းခြင်းမြေဩဇာများထည့်သွင်းခြင်းပေါင်းရှင်းခြင်းရောဂါပိုးမွှားများကို ကာကွယ်နှိမ်နင်းခြင်းကိုင်းခြောက်နှင့် ကျပ်နေသောကိုင်းများ ဖယ်ရှားပေးခြင်း) ဖြင့် နှစ်စဉ်သီးပွင့်အောင်ပြုလုပ်နိုင်သည်။ သရက်ပန်းပွင့်ချိန်မတိုင်မီ (၂) လ မှ (၃) လအလိုတွင် မြေတွင်းအစိုဓာတ်နည်းပြီး ခြောက်သွေ့သော ရာသီဥတုရရှိရန် လိုအပ် ပါသည်။ ပန်းပွင့်ချိန်နှင့် သီးကင်းဝင်ချိန်တွင် ရေပေးသွင်း၍ သရက်ပင် တစ်ပင်လျှင် ကွန်ပေါင်းမြေဩဇာ နိုဆီဗူး (၂) ဗူးမှ (၃) ဗူးနှင့် နွားချေးမြေဆွေးတစ်တင်း ထည့်သွင်း ပေးပါက ပွင့်သီးမှုအားကောင်းပါသည်။ အသီးကင်းဝင်ချိန်တွင် အိတ်စွပ်ပေးခြင်းဖြင့် သီးထိုး ယင်များ၏ အန္တရာယ်မှ ကာကွယ်နိုင်ပြီး အသီးအရည်အသွေး ပိုမိုကောင်းမွန် စေပါသည်။ အစေ့မှစိုက်ပျိုးသည့် အပင်များသည် ပြုစုစောင့်ရှောက်မှုအပေါ်မူတည်၍ (၄) နှစ်မှ (၅) နှစ်သားတွင် လည်းကောင်း၊ ကိုင်းကူးကိုင်းဆက်အပင်များသည် (၃) နှစ်သားမှစတင်၍ လည်းကောင်း အသီးစတင်၍ ခူးဆွတ်နိုင်သည်။ . ယနေ့မြန်မာနိုင်ငံတွင် စီးပွားဖြစ် စိုက်ပျိုးလျက်ရှိသော သရက်မျိုးများမှာ စိန်တလုံး၊ မြကျောက်မချစ်စုအောင်ဒင်၊ စံရ၊ ရင်ကွဲ စသည်တိုဖြစ်ပါသည်။
    </string>
    <string name="banana1">
        အပူပိုင်းဒေသသီးနှံဖြစ်သော ငှက်ပျောသည် အစိုဓါတ်နှင့် အပူဓါတ်ကို နှစ်သက်သော အပင်အမျိုးအစား ဖြစ်သည်။ ပူပြင်းခြောက်သွေ့သော ရာသီဥတုနှင့် အေးခဲသောရာသီဥတု ကိုမနှစ်သက်ပါ၊ တစ်နှစ်ပတ်လုံး စိုက်ပျိုးနိုင်သော်လည်း မိုးရာသီတွင် ပိုမိုသင့်လျော်သည်ငှက်ပျောကို မြန်မာနိုင်ငံနေရာဒေသ အနှံအပြားနီးပါးတွင် စိုက်ပျိုးဖြစ်ထွန်းသည်ကို တွေ့ရှိ ရသည်။ ငှက်ပျောကို အပင်၏အခြေမှထွက်သော သားတက်များဖြင့် မျိုးပွားစိုက်ပျိုးနိုင်သည်။ ပင်စည်တုတ်ခိုင်သန်စွမ်းပြီး အထက်သိုရှူးကာ အရွက်ကျဉ်းသည့်သားတက်များကို ရွေးချယ် စိုက်ပျိုးကြသည်။ ပင်ကြားတန်းကြားကို (၄) ပေ၊ (၅) ပေအကွာအဝေးထား၍ စိုက်ပျိုး နိုင်သည်။အသီးတင်နှုန်းကောင်းရန် ခြောက်သွေ့နေသောအရွက်များရွက်ဖတ်များနှင့် သားတက် များကိုအချိန်မီ ဖယ်ရှားပေးရန် လိုအပ်သည်။
    </string>
    <string name="banana2">
        လေပြင်းတိုက်ခိုက်မှုကြောင့် အသီးများ ထိခိုက် ပျက်စီးခြင်းကို ကာကွယ်ရန် ငှက်ပျောခိုင်များကို ဝါးလုံးများနှင့် ထောက်မပေးထားရမည်။ ယေဘုယျအားဖြင့်ငှက်ပျောသည် စိုက်ပျိုးပြီးနောက် (၇) လအကြာတွင် ပန်းပွင့်သည်သီးခိုင်ပြည့်စုံပြီးနောက် အသီးများကောင်းမွန်စွာဖွံဖြိုးရန် အဖူးကိုဖယ်ရှားပေးရသည်။ ပန်းပွင့် ပြီး (၃) လမှ (၄) လအကြာတွင် အသီးရင့်မှည့်သည်။ သီးခိုင်ခူးဆွတ်ပြီးနောက် ငှက်ပျောပင်ကို ခုတ်ဖြတ်ဖယ်ရှားပေးရသည်။
    </string>
    <string name="veg_soil">
စပါးခွံ၊ ကောက်ရိုး၊ ပေါင်းမြက်၊ ကြက်ဆူစေ့အခွံ၊ ကြက်ဆူကြိတ်ဖတ်နှမ်းရိုး၊ ပဲရိုး၊ နေကြာရိုး၊ ပြောင်းဖူးရိုးစသည်တို့ကို အဓိကအသုံးပြု၍ မြေဆွေးပြုလုပ်ခြင်းဖြစ်ပါသည်။
    </string>
    <string name="veg_soil_ka">
(က) မြေဆွေးပုံတွင်အသုံးပြုမည့်ပစ္စည်းများတစ်ထပ်စီထပ်ကာအလွှာလိုက်ပုံရမည်။
    </string>
    <string name="veg_soil_kha">
(ခ) အလွယ်တကူမဆွေးမြေ့သောစွန့်ပစ်ပစ္စည်းများကို အောက်ဆုံးအလွှာတွင်ထား ရမည်။
    </string>
    <string name="veg_soil_ga">
(ဂ) အလွှာတစ်လွှာချင်းစီ၏အထူသည် (၈) လက်မထက်မပိုသင့်ပေ။
    </string>
    <string name="veg_soil_gagyi">
(ဃ) တစ်လွှာနှင့်တစ်လွှာအကြားတွင် တိရစ္ဆာန်စွန့်ပစ်ပစ္စည်းများ (ဥပမာ - ကျွဲ၊ နွား၊ ဝက်၊ ကြက်၊ ဘဲ၊ ဆိတ်၊ သိုးစသည်တို့၏ စွန့်ပစ်ပစ္စည်းများ) ထည့်ပေးလျှင် ပို၍ ကောင်းသည်။
    </string>
    <string name="veg_soil_nha">
(င) မြေဆွေးပုံ၏ အမြင့်နှင့် အကျယ်မှာ ၄-၅ ပေ ထက် မပိုသင့်ပေ။
    </string>
    <string name="veg_soil_sa">
(စ) မြေဆွေးပြုလုပ်ရန်အသုံးပြုသော စွန့်ပစ်ပစ္စည်းများပေါ်မူတည်၍ မြေဆွေးပုံ၏ အရှည်ကို နှစ်သက်သလိုထားနိုင်ပါသည်။
    </string>
    <string name="veg_soil_ssa">
(ဆ) မြေဆွေးပြုလုပ်ရာတွင် လေရရှိရန် လိုအပ်သောကြောင့် မြေဆွေးပုံအတွင်းသို့ လေဝင်လေထွက်ရရှိစေရန် ဝါးများကို အပေါက်ဖောက်၍ထည့်ထားပေးသင့်သည်။
    </string>
    <string name="veg_soil_za">
(ဇ) အပူချိန်တက်လာသည်နှင့်အမျှ ဆွေးမြေ့နှုန်းမြန်လာသည်။
    </string>
    <string name="veg_soil_zza">
(စျ) တစ်လခန့်ကြာလျှင် အထက်အောက်လှန်ပေးခြင်းကို တစ်ကြိမ်ပြုလုပ်ပေးရမည်။ လိုအပ်ပါက မြေဆွေးပုံကို ရေထပ်လောင်းပေးရပါမည်။ အစိုဓာတ် များပါက လည်း မြေဆွေးပုံကျစ်၍ မာသွားတတ်သဖြင့် ရေလောင်းရာ၌ အစိုဓာတ်မများစေရန် သတိပြုရမည်။
    </string>
    <string name="veg_soil_nya">
(ည) မြေဆွေးပုံအတွင်း အစိုဓာတ်နှင့် အပူချိန်ကို ထိန်းနိုင်ရန် မြေဆွေးပုံကို ငှက်ပျောရွက် (သို့မဟုတ်) ပလပ်စတစ်များဖြင့် ဖုံးအုပ်ပေးထားရမည်။
    </string>
    <string name="veg_soil_hta">
(ဋ) မြေဆွေးပုံ၌ အစိုဓာတ်အလွန်များလာလျှင် အထက်အောက်လှန်ပေးခြင်း (သို့မဟုတ်) ခြောက်သွေ့သော စွန့်ပစ်ပစ္စည်းများ ထပ်မံဖြည့်ပေးခြင်းဖြင့် ပြုပြင် နိုင်သည်။
    </string>
    <string name="veg_soil_hta_win">
(ဌ) သုံးလခန့်ကြာလျှင်မြေဆွေးပုံသည်အသုံးပြုရန် အသင့်အနေအထားသို့ ရောက်ရှိလာသည်။
    </string>
    <string name="tigyit">
        တီကျစ်စာမြေဆွေးဆိုသည်မှာ တီကောင်များက သဘာဝအလျောက် မြေကြီးများသစ်ရွက်များ၊ သစ်ပင်အကြွင်းအကျန်များ၊ နွားချေးများ၊ လယ်ယာစွန့်ပစ်ပစ္စည်းများကို စားသုံး၍ ပြန်လည်စွန့်ထုတ်လိုက်သည့်ပစ္စည်းကို ဆိုလိုခြင်းဖြစ်ပါသည်။ တီကောင်က စွန့်ပစ် သည့် တီကျစ်စာများကို သဘာဝအလျောက်စုဆောင်းရရှိနိုင်သော်လည်း လူတို့ ဖန်တီးပေး သော ပတ်ဝန်းကျင်တွင်တီကောင်များကို မွေးမြူကာ တီကျစ်စာ မြေဆွေးထုတ်လုပ်ခြင်းက အမြောက်အများရရှိစေပါသည်။
    </string>
    <string name="tigyit1">
တီကျစ်စာမြေဆွေး ပြုလုပ်ရာတွင် အောက်ပါအတိုင်း အဆင့်ဆင့်ပြုလုပ်နိုင်ပါသည်။
    </string>
    <string name="tigyit2">
(က) ပထမဦးစွာအလျား (၁၀) ပေ၊ အနံ (၄) ပေ၊ အမြင့် (၃)ပေရှိ အုတ်ကန်တစ်ကန် တည်ဆောက်ရပါမည်။ ရေမဝပ်စေရန်အောက်ခြေအုတ်ခဲထုကို ဆင်ခြေလျှောပုံ ခင်းပေးရမည်။ (အကယ်၍အုတ်ကန် တည်ဆောက်ရန် ခက်ခဲသည့်ဒေသများ တွင်မူ ဒေသထွက်ဝါးထရံဝါးကပ်များကိုအသုံးပြုနိုင်ပါသည်။)
    </string>
    <string name="tigyit3">
(ခ) အုတ်ကန်၏အောက်ခြေအနိမ့်ပိုင်းတွင်တီကောင်စွန့်ပစ်အရည် (တီစစ်ရည်) ထုတ်ယူရန် အပေါက် ဖောက်၍လက်မဝက်မှ (၁) လက်မအရွယ်ရှိသော ပိုက်ကို တပ်ဆင်ပါ။
    </string>
    <string name="tigyit4">
(ဂ) ယင်းအပေါ်သို့ မြေကြီး၊ နွားချေးဆွေး၊ ကြက်ချေးဆွေးများရောနှော၍ (၆) လက်မခန့် အထူရအောင် ထည့်ပါ။ အပေါ်မှသစ်ရွက်များ၊ အမှိုက်များ၊ ပေါင်းမြက်များနှင့် လယ်ယာထွက်စွန့်ပစ်ပစ္စည်းများ . (၆)လက်မခန့် အထူ ရအောင်ထပ်မံ ထည့်ပါ။ ယင်းတို့ကိုတစ်လွှာဟုမှတ်ယူရမည်။
    </string>
    <string name="tigyit5">
(ဃ) တီကောင်မွေးမြူရေးကန်ပြည့်သည်အထိ နွားချေးဆွေးနှင့်သစ်ရွက်များ ရောနှော၍ အလွှာ အထပ်ထပ် ပြုလုပ်ပေးပြီးပါက တီကောင်တစ်မျိုးမျိုးကို အကောင်ရေ (၂၅၀) မှ (၁၀၀၀) ခန့် ထည့်ပေးရမည်။
    </string>
    <string name="tigyit6">
(င) ကန်တွင်း၌ အစိုဓာတ်လုံလောက်စေရန်အတွက် ရေလောင်းပေးရပါမည်။ ရေလောင်းရာတွင် စိုစွတ် ရုံသာလောင်းပါ။
    </string>
    <string name="tigyit7">
(စ) မိုးရေမ၀င်ရောက်စေရန်နှင့် အပူဒဏ်ကိုကာကွယ်ရန်အတွက် အမိုးမိုးပေးရမည်။ သွပ်၊ ဓနိ၊ သက်ကယ် တစ်မျိုးမျိုးကို သုံးစွဲနိုင်ပါသည်။
    </string>
    <string name="tigyit8">
(ဆ) တီကောင်မွေးမြူရေးကန် အောက်ခြေတွင် တပ်ဆင်ထားသောပိုက်မှတစ်ဆင့် တီကောင်စွန့်ပစ်အရည်အား စုဆောင်းထားနိုင်ပါသည်။
    </string>
    <string name="tigyit9">
(ဇ) တီကောင်စွန့်ပစ်အရည်များကို မြေဩဇာအဖြစ် အသုံးပြုနိုင်ပါသည်။
    </string>
    <string name="tigyit10">
(စျ) တီကောင်များ၏ခြေဖျက်မှုကြောင့် တီကောင်စွန့်ပစ်အရည်အပြင် အညိုရောင် တီကျစ်စာ မြေဆွေးများလည်းရရှိပါသည်။
    </string>
    <string name="tigyit11">
(ည) တီကောင်မြေဆွေးများ မထုတ်ယူမီ (၂) ရက်မှ (၃) ရက်ခန့်ကြိုတင်၍ ရေဖျန်းခြင်း ရပ်ဆိုင်းထားရပါမည်။
    </string>
    <string name="virous_soil">
ပြုလုပ်ပုံအဆင့်ဆင့် မှာ
    </string>
    <string name="virous_soil1">
(က) စည်ပိုင်းပြတ်ထဲသို့ရေဂါလံ (၂၀) ထည့်ပါ။
    </string>
    <string name="virous_soil2">
(ခ) ထိုရေထဲသို့အသင့်သုံးအီးအမ်ဖျော်ရည်နို့ဆီခွက် (၃) ခွက်နှင့် တင်လဲရည် (၃) ခွက်လောင်းထည့်၍ တုတ်ဖြင့် မွှေပါ။
    </string>
    <string name="virous_soil3">
(ဂ) သီးနှံဘေးထွက် ပစ္စည်းများကိုတစ်လွှာလျှင်အလျား (၆) ပေ၊ အနံ (၃) ပေ၊ ထု (၆) လက်မရှိအောင် ပြုလုပ်၍ အရိပ်အောက်တွင် စုပုံပါ။
    </string>
    <string name="virous_soil4">
(ဃ)သီးနှံဘေးထွက် ပစ္စည်းများအလွှာ တစ်လွှာချင်းပေါ်တွင် အီးအမ်ဖျော်ရည် (၃)ဂါလံနှုန်း ဖျန်းပေးပါ၊
    </string>
    <string name="virous_soil5">
(င) နွားချေးအမှုန့် (၈)ပြည် ထပ်၍ ဖြူးပါ။
    </string>
    <string name="virous_soil6">
(စ) အလွှာ (၆)လွှာအထိ အထပ်ထပ်ပုံပါ။
    </string>
    <string name="virous_soil7">
(ဆ) အပေါ်မှ ပလပ်စတစ်ဖြင့် လုံအောင်ဖုံးပါ။
    </string>
    <string name="virous_soil8">
(ဇ) (၃) ရက်ကြာလျှင် မြေဆွေးပုံအတွင်း၌ပူနေပြီး အဖြူရောင်မှိုမျှင်များထွက်ပေါ်၍ ထည့်သွင်းထားသော သီးနှံဘေးထွက်ပစ္စည်းများ စတင်ဆွေးမြေ့နေကြောင်း သိရှိနိုင်ပါသည်။
    </string>
    <string name="eggplant_white1">
ရောဂါလက္ခဏာ ။ ။ ခရမ်းချဉ်ဖျူစေရီယမ်ပင်ညှိုးရောဂါသည် အပင်ငယ်စဉ်အချိန်၌ ကျပါက အရွက်နု များတွင် ရွက်ကြောများ ထင်ရှားလာခြင်း၊ အရွက်ရင့်များတွင် အညှာမှစ၍ ငိုက်ကျလာ ခြင်းများတို့ တွေ့ရသည်။ ပျိုးပင်အဆင့်တွင်မူ ရောဂါလက္ခဏာပြပြီး မကြာမီ တစ်ပင်လုံး ညှိုး၍ သေသွားတတ်သည်။
    </string>
    <string name="eggplant_white2">
အပင်ကြီးအဆင့်တွင် ရောဂါပြင်းထန်ပါက ရုတ်တရက် ညှိုး၍သေဆုံးနိုင်သည်။ ထို့ပြင် အောက်အရွက်များဝါခြင်း၊ ညှိုးခြင်း၊ အရွက်ကြွေခြင်း၊ ကျန်အရွက်များတွင် အနားများ ခြောက်ခြင်းဖြစ်ကာ နောက်ဆုံးတွင် အပင်သေဆုံးသွားနိုင်သည်။ ဤလက္ခဏာများသည် အပင်တစ်ခြမ်း သို့မဟုတ် ကိုင်းတစ်ချို့တွင် ဖြစ်ပေါ်တတ်ပြီး ကျန်အစိတ်အပိုင်းများတွင် ရောဂါလက္ခဏာမပြဘဲ ရှိနေတတ်သည်။ ရောဂါကျပင်စည်ကို ကန့်လန့်ဖြတ်ပိုင်း ဖြတ်ကြည့် လျှင် အမြစ်အတွင်း၌ အညိုရောင်ပြောင်းနေသည်ကို တွေ့နိုင်သည်။
    </string>
    <string name="eggplant_white3">
ရောဂါဖြစ်စေသောမှို ။ ။ ရောဂါဖြစ်စေသောမှို၏ သိပ္ပံအမည်မှာ Fusarium oxysporum f. sp. Lycopersici ဖြစ်သည်။
    </string>
    <string name="eggplant_white4">
ကာကွယ်နှိမ်နင်းနည်းများ
    </string>
    <string name="eggplant_white5">
(၁) ရောဂါဒဏ်ခံနိုင်ရည်ရှိသော မျိုးကို သုံးပါ၊
    </string>
    <string name="eggplant_white6">
(၂) ရောဂါကင်း၍ သန်စွမ်းသော မျိုးစေ့နှင့်ပျိုးပင်ကို သုံးပါ။
    </string>
    <string name="eggplant_white7">
(၃) Trichoderma harzionum မှိုကို အသုံးပြု၍ နှိမ်နင်းနိုင်သည်။
    </string>
    <string name="eggplant_white8">
(၄) စိုက်ပျိုးမြေကို ပလတ်စတစ်အကြည်စ ဖုံးအုပ်ခြင်းဖြင့် နေရောင်ခြည်မှ အပူဓာတ် ရရှိကာ ရောဂါဖြစ်ပွားစေသည့်မှိုကို လျော့နည်းစေပါသည်။
    </string>
    <string name="onion_dry1">
ရောဂါလက္ခဏာ ။ ။ ကြက်သွန်ရွက်ခြောက်ရောဂါလက္ခဏာကို အရွက်များပေါ်တွင် တွေ့ရတတ်သည်အရွက်၏ ထိပ်ဖျားတွင် စိမ်းဝါဖျော့ရောင် သို့မဟုတ် အညိုရောင် ဘဲဥပုံစံ အကွက်များကို တွေ့ရတတ်ပြီး ထိုအကွက်များသည် အောက်ဘက်သို့ တဖြည်းဖြည်း ပျံ့နှံ့သွားသည်။ ထိုအခါ အရွက်ရင့်များ၏ ထိပ်ဖျားမှာ အရောင်ဖျော့၍ တွန့်ရှုံ့လာသည်။ အကွက် များပေါ်တွင်လည်း မီးခိုးပြာရောင် သို့မဟုတ် ခရမ်းညိုရောင် မှိုမျှင်များနှင့် ဖုံးအုပ်နေပြီး ရောဂါကျအကွက်များ တစ်ခုနှင့်တစ်ခုဆက်ကာ အရွက်များခြောက်လာသည်။ ကြက်သွန်ကို သိုလှောင်ထားရာတွင်လည်း ဥများပုပ်ခြင်း၊ ရှုံ့ခြင်းများ ဖြစ်နိုင်ပြီး အပြင်ဖက်ဆုံးအခွံများ အရောင်ပျက်လာတတ်သည်။
    </string>
    <string name="onion_dry2">
ရောဂါဖြစ်စေသောမှို ။ ။ရောဂါဖြစ်စေသောမှို၏ သိပ္ပံအမည်မှာ Peronospora destructor ဖြစ်သည်။
    </string>
    <string name="onion_dry3">
ကာကွယ်နှိမ်နင်းနည်းမျာ
    </string>
    <string name="onion_dry4">
(၁) ကြက်သွန်နီနှင့်မျိုးရင်းတူအပင်စိုက်ခင်းများကို နီးကပ်စွာစိုက်ပျိုးခြင်းမှရှောင်ကြဉ်ပါ။
    </string>
    <string name="onion_dry5">
(၂) ရေသွင်းရေထုတ် ကောင်းမွန်သောမြေတွင် စိုက်ပျိုးပါ။
    </string>
    <string name="onion_dry6">
(၃) ရောဂါဖြစ်ပွားလေ့ရှိသော ဒေသများတွင် အခြားသီးနှံနှင့် အလှည့်ကျစိုက်ပျိုးခြင်းစနစ် ကို သုံးပါ။
    </string>
    <string name="onion_dry7">
(၄) အပင်ထူထပ်ခြင်းအပင်သန်စွမ်းလွန်ခြင်းနှင့် ရေပန်းဖျန်းစနစ်ဖြင့် ရေပေးခြင်း တို့သည် ရောဂါကျရောက်မှုကို အားပေးစေနိုင်ပါသည်။
    </string>
</resources>