<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".FruitSoil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="သီးနှံအကြွင်းအကျန်များကိုအသုံးပြု၍မြေဆွေးပြုလုပ်ခြင်း"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/compost_vegitable1" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_ka"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_kha"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_ga"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/compost_vegitable2" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_gagyi"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_nha"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_sa"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_ssa"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/compost_vegetables3" />

        <TextView
            android:id="@+id/txt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_za"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_zza"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_nya"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_hta"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/veg_soil_hta_win"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

</ScrollView>