<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".WarmSoil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="တီကျစ်စာမြေဆွေးပြုလုပ်ခြင်း"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/worm_compost2" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit1"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit2"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit3"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/worm_casting1" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit4"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit5"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit6"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit7"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/txt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit8"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/worm_casting2" />

        <TextView
            android:id="@+id/txt10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit9"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit10"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/txt12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tigyit11"
            android:textColor="@color/black"
            android:textSize="18dp"/>

    </LinearLayout>

</ScrollView>