<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".VirousSoil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="အကျိုးပြုအဏုဇီဝသက်ရှိများပါဝင်သော ဖျော်ရည် (အီးအမ်ဖျော်ရည်) ကို အသုံးပြု၍ မြေဆွေးပြုလုပ်ခြင်း"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/virous_soil"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/virous_soil1"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/virous_soil2"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/virous_soil3"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/virous_soil4"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/virous_soil5"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/virous_soil6"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/virous_soil7"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/virous_soil8"
            android:textColor="@color/black"
            android:textSize="18dp"/>


    </LinearLayout>

</ScrollView>