<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".OnionDry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ကြက်သွန်ရွက်ခြောက်ရောဂါ"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/txt0"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/onion_downy_mildew" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion_dry1"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:id="@+id/txt1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion_dry2"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:id="@+id/txt2"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/onion_downy_mildew2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion_dry3"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:id="@+id/txt3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion_dry4"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:id="@+id/txt4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion_dry5"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:id="@+id/txt5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion_dry6"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:id="@+id/txt6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion_dry7"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:id="@+id/txt7"/>
    </LinearLayout>

</ScrollView>